samples/_failures_safe/1761321316_c05cfe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e0987b7.c: In function ‘main’:
./samples/SAFE/__tmp_6e0987b7.c:154:5: error: expected expression at end of input
  154 |     if (!compress_rle(input_buf.data,
      |     ^~
./samples/SAFE/__tmp_6e0987b7.c:154:10: error: too few arguments to function ‘compress_rle’
  154 |     if (!compress_rle(input_buf.data,
      |          ^~~~~~~~~~~~
./samples/SAFE/__tmp_6e0987b7.c:50:5: note: declared here
   50 | int compress_rle(const unsigned char *input, size_t input_len, Buffer *output) {
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_6e0987b7.c:154:5: error: expected declaration or statement at end of input
  154 |     if (!compress_rle(input_buf.data,
      |     ^~
